Updating responsiveness and fixing API issue
Updating responsiveness for html pages and API stopped working so changed code to fix that (events and components js files)

--- a/assessment/community.html
+++ b/assessment/community.html
@@ -26,18 +26,17 @@
     <!--<script>: JavaScript files in web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
     <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
     <script type="module" src="js/page_load_message.js" defer></script>
-    <script type="module" src="js/serviceWorker.js" defer></script>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="./js/components.js" defer></script>
 
     <!-- Appears in the browser tab and is used by search engines.-->
-    <title>Home</title>
+    <title>Community</title>
   </head>
   <body>
     <header>
       <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
       <a href="index.html">
-        <img class = "logo" src="./icons/Frame 68.png" alt = "Logo">
+        <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
       </a>
 
       <nav>
@@ -69,14 +68,10 @@
       </div>
 
     </header>
-
-
     <div>
       <main>
-
         <div class="nav_buttons">
           <!--Type = button - Does not have any default behavior like submitting a form.-->
-          <button type="button" class="navigation-button">Community</button>
           <a href="#discussion-form">
             <button type="button" class="navigation-button">Discussion Board</button>
           </a>
