--- a/assessment/index.html
+++ b/assessment/index.html
@@ -54,9 +54,10 @@
     
     <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
     <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
-    <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
     <script type="module" src="js/serviceWorker.js" defer></script>
+    <script type="module" src="js/index.js" defer></script>
+    <script type="module" src="./js/components.js" defer></script>
 
     <!-- Appears in the browser tab and is used by search engines.-->
     <title>Home</title>
@@ -65,7 +66,7 @@
     <header>
       <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
       <a href="index.html">
-        <img class = "logo" src="./icons/Frame 68.png" alt = "Logo">
+        <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
       </a>
 
       <nav>
@@ -88,10 +89,10 @@
 
       <div class="off-screen-menu">
         <ul>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
-          <a href="community.html">Community</a>
+          <a class="active" href="community.html">Community</a>
           <a href="insights_recommendations.html">Insights and Recommendations</a>
         </ul>
       </div>
