--- a/assessment/index.html
+++ b/assessment/index.html
@@ -78,10 +78,10 @@
       </nav>
 
       <nav id="flexnavbar">
-        <a href="index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
-        <a class="active" href="community.html">Community</a>
+        <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
@@ -107,7 +107,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="index-title">
         <h2>Upcoming Events</h2>
       </div>
 
@@ -163,7 +163,7 @@
       <div class="title-container4">
           <div class="container-headings">
             <h1>Are you feeling unsafe?</h1>
-            <h3>Search for a contact or click on one below.</h3>
+            <h3>Click on a contact below.</h3>
           </div>
           <img src="./images/sos.png" alt="Group Photo">
       </div>
