--- a/assessment/read-more.html
+++ b/assessment/read-more.html
@@ -138,8 +138,8 @@
       </div>
       <div class="guide-end">
         <div class="guide-meta">
-          <span>1d ago</span> | 
-          <span>224 views</span> | 
+          <span>1d ago</span>
+          <span>224 views</span>
           <span>6 comments</span>
           <button class="view-comments-button" onclick="toggleComments()">View Comments</button>
         </div>
