--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -51,8 +51,8 @@
   
         <nav id="flexnavbar">
           <a href="index.html">Home</a>
-          <a href="safetyguides.html">Safety Guides</a>
-          <a class="active" href="events.html">Events</a>
+          <a class="active" href="safetyguides.html">Safety Guides</a>
+          <a href="events.html">Events</a>
           <a href="community.html">Community</a>
           <a href="insights_recommendations.html">Insights and Recommendations</a>
         </nav>
