Added pop up boxes
Pop up boxes for event details on events and insights pages.

--- a/assessment/community.html
+++ b/assessment/community.html
@@ -102,21 +102,27 @@
                   </a>
                 </div>
                 <div class="image-container">
-                  <img src="./images/nature.jpg" style="width:100%;">
-                  <div class="text">Nature</div>
+                  <a href="budget-community.html">
+                    <img src="./images/nature.jpg" style="width:100%;">
+                    <div class="text">Nature</div>
+                  </a>
                 </div>
               </div>
             </div>
             <div class="mySlides">
               <div class="slide-container">
                 <div class="image-container">
-                  <img src="./images/cultural.jpg" style="width: 100%;">
-                  <div class="text">Cultural Experiences</div>
+                  <a href="budget-community.html">
+                    <img src="./images/cultural.jpg"style="width:100%;">
+                    <div class="text">Cultural</div>
+                  </a>
                 </div>
 
                 <div class="image-container">
-                  <img src="./images/foodie.jpg" style="width:100%;">
-                  <div class="text">Foodie Adventures</div>
+                  <a href="budget-community.html">
+                    <img src="./images/foodie.jpg" style="width:100%;">
+                    <div class="text">Foodie Adventures</div>
+                  </a>
                 </div>
 
               </div>
