--- a/assessment/events.html
+++ b/assessment/events.html
@@ -101,36 +101,36 @@
         <div class="new-slideshow-container slideshow1">
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/event2.jpg" alt="Carnival Poster Brazil">
+              <div class="new-image-container" data-host="Rio Fest. Inc" data-date="March 5, 2025">
+                <img src="./images/event2.jpg" alt="Photograph of three smiling women in carnival outfits.">
                 <div class="new-text">
                   <h2>Carnival celebrations!</h2>
-                  <p>6 places to immerse yourself into the colourful festivities!</p>
+                  <p>Rio Fest is hosting the biggest carnival festivals at the city centre. Immerse yourself into the colourful festivities in the next few weeks!</p>
                 </div>
               </div>
-              <div class="new-image-container">
+              <div class="new-image-container" data-host="La Reze CLub" data-date="Dec 10-15, 2024">
                 <img src="./images/events1.jpg" alt="Photo of girl smiling at a party">
                 <div class="new-text">
-                  <h2>Top 5 in Nightlife</h2>
-                  <p>The top 5 clubs in Rio for all kinds of people.</p>
+                  <h2>5 Theme Nights!</h2>
+                  <p>5 theme nights in the hottest club in Rio for all kinds of people.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/event3.jpg" alt="Music Festival Digital Flyer">
+              <div class="new-image-container" data-host="The Jazz Club" data-date="January 10, 2025">
+                <img src="./images/event3.jpg" alt="Photograph of jazz band">
                 <div class="new-text">
                   <h2>Calling all Jazz Lovers!</h2>
-                  <p>Jazz events around Brasilia...</p>
+                  <p>Brasilia's Official Jazz Club</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/event4.jpg" alt="Night Club Event Digital Flyer">
+              <div class="new-image-container" data-host="Acústica" data-date="November 14, 2024">
+                <img src="./images/event4.jpg" alt="Photograph of DJ hands in a nightclub">
                 <div class="new-text">
                   <h2>✨Night Club Magic✨</h2>
-                  <p>Dance the night away at my favourite night clubs of the Sao Paulo!</p>
+                  <p>Dance the night away at everyone's favourite night club!</p>
                 </div>
               </div>
             </div>
@@ -159,36 +159,36 @@
         <div class="new-slideshow-container slideshow2" id="new-slideshow-container slideshow2">
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/adventure1.jpg" alt="Adventure 1">
+              <div class="new-image-container" data-host="Brazil Adventures" data-date="Oct 2024 - January 2025">
+                <img src="./images/adventure1.jpg" alt="Woman with ziplining gear on a bridge overlooking trees.">
                 <div class="new-text">
-                  <h2>Top 5 Adventures</h2>
-                  <p>Explore the best adventure spots in Foz do Iguaçu!</p>
+                  <h2>Brazil Adventures Ziplining</h2>
+                  <p>Zip lining tours at $60 for the next few months!</p>
                 </div>
               </div>
               <div class="new-image-container">
-                <img src="./images/adventure2.jpg" alt="Adventure 2">
+                <img src="./images/adventure2.jpg" alt="Photograph of two women diving in ocean.">
                 <div class="new-text">
                   <h2>Swim with the sharks!</h2>
-                  <p>6 places to explore Fernando de Noronha's seas!</p>
+                  <p>6 spots tour: Explore Fernando de Noronha's seas! Visit our site to find out more.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/adventure3.jpg" alt="Music Festival">
+              <div class="new-image-container" data-host="The Amazon Tours" data-date="February 7-27, 2025">
+                <img src="./images/adventure3.jpg" alt="Photograph of river in the Amazon rainforest during sunset">
                 <div class="new-text">
                   <h2>The Amazon!</h2>
-                  <p>4 secret spots for photography lovers!</p>
+                  <p>A tour of 4 hidden gems for photography lovers! Book now on our site!</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/adventure4.jpg" alt="Night Club">
+              <div class="new-image-container" data-host="Foz do Iguaçu Tourers" data-date="December 2024 - January 2025">
+                <img src="./images/adventure4.jpg" alt="Photograph of women looking at river view in a forest.">
                 <div class="new-text">
                   <h2>Want to get away from the city?</h2>
-                  <p>Relax under the sun at 3 of my favourite spots in Foz do Iguaçu!</p>
+                  <p>Relax under the sun in Foz do Iguaçu!</p>
                 </div>
               </div>
             </div>
@@ -204,36 +204,36 @@
         <div class="new-slideshow-container slideshow3" id="new-slideshow-container slideshow3">
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/sport1.jpg" alt="Sport 1">
+              <div class="new-image-container" data-host="Rio Sports Inc." data-date="April 5, 2024">
+                <img src="./images/sport1.jpg" alt="Photograph of woman holding surfboard in ocean water.">
                 <div class="new-text">
                   <h2>Top 5 Sports</h2>
                   <p>Exciting sports events in Rio to check out!</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/sport2.jpg" alt="Sport 2">
+              <div class="new-image-container" data-host="Jijoca de Jericoacoara Volleyball" data-date="March - June, 2025">
+                <img src="./images/sport2.jpg" alt="Photograph of two women playing volleyball on the beach.">
                 <div class="new-text">
-                  <h2>The beaches of Jijoca de Jericoacoara!</h2>
-                  <p>Here are 5 beaches with the equipment and the people!</p>
+                  <h2>Volleyball Jijoca de Jericoacoara!</h2>
+                  <p>Spend hours at our beach volleyball spots, equiped with everything you need!</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/sport3.jpg" alt="Music Festival">
+              <div class="new-image-container" data-host="Fortaleza Sails" data-date="February - August 2025">
+                <img src="./images/sport3.jpg" alt="Photograph of sail boat on water">
                 <div class="new-text">
                   <h2>Fortaleza's waters!</h2>
-                  <p>3 top places to try out a nice day of sailing!</p>
+                  <p>2/4 hour sailing trips</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/sport4.jpg" alt="Night Club">
+              <div class="new-image-container" data-host="Windsurf Times" data-date="February - August 2025">
+                <img src="./images/sport4.jpg" alt="Photograph of person windsurfing in the ocean">
                 <div class="new-text">
-                  <h2>5 spots to windsurf in Salvador</h2>
-                  <p>Enjoy a budget friendly adventurous time!</p>
+                  <h2>Explore windsurfing in Salvador</h2>
+                  <p>Have a budget friendly adventurous time! Head to our site and book now.</p>
                 </div>
               </div>
             </div>
@@ -249,36 +249,36 @@
         <div class="new-slideshow-container slideshow4" id="new-slideshow-container slideshow4">
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/sightseeing1.jpg" alt="Sport 1">
+              <div class="new-image-container" data-host="Amazing Brazil" data-date="All year round">
+                <img src="./images/sightseeing1.jpg" alt="Photograph of mountains">
                 <div class="new-text">
                   <h2>Hidden Gems</h2>
-                  <p>6 hidden gems in Rio for photography lovers!</p>
+                  <p>Hidden gems tour of Rio's street life for photography lovers!</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/sightseeing3.jpg" alt="Sport 2">
+              <div class="new-image-container"  data-host="Rio Trails" data-date="April- August 2025">
+                <img src="./images/sightseeing3.jpg" alt="Photograph of wooden bridge leading to beach">
                 <div class="new-text">
                   <h2>Hiking Trails</h2>
-                  <p>3 hiking trails in Rio that blew me away!</p>
+                  <p>Choose from 3 hiking trails in Rio each offering breathtaking views!</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="mySlides">
             <div class="new-slide-container">
-              <div class="new-image-container">
-                <img src="./images/sightseeing2.jpg" alt="Music Festival">
+              <div class="new-image-container"  data-host="Mountain Explorer" data-date="August - October 2025">
+                <img src="./images/sightseeing2.jpg" alt="Photograph of mountains">
                 <div class="new-text">
                   <h2>Mountains to explore</h2>
-                  <p>4 mountains that offer the best view of Rio!</p>
+                  <p>4 mountains that offer the best view of Rio! Book now!</p>
                 </div>
               </div>
-              <div class="new-image-container">
-                <img src="./images/sightseeing4.jpg" alt="Night Club">
+              <div class="new-image-container"  data-host="Coastliners" data-date="February - November 2025">
+                <img src="./images/sightseeing4.jpg" alt="Photograph of coast in Rio de Janeiro">
                 <div class="new-text">
                   <h2>Coast of Rio de Janeiro</h2>
-                  <p>12 things to do at the coast!</p>
+                  <p>12 activities whilst you spend your days in Rio's beautiful coast!</p>
                 </div>
               </div>
             </div>
@@ -286,6 +286,17 @@
           <a class="new-prev" onclick="slideshow4.plusSlides(-1)">&#10094;</a>
           <a class="new-next" onclick="slideshow4.plusSlides(1)">&#10095;</a>
         </div>
+
+        <div id="modal" class="modal">
+          <div class="modal-content">
+              <span class="close" onclick="closeModal()">&times;</span>
+              <h2 class="modal-title"></h2>
+              <p class="modal-description"></p>
+              <p class="modal-host"></p>  <!-- Host information -->
+              <p class="modal-date"></p>  <!-- Date information -->
+          </div>
+        </div>
+        
 
       
       </main>
